# ecfr-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
data/analysis/: agency_hierarchy_map.json  bureaucracy_footprint.json  corrections_by_agency.json  corrections_over_time.json  dei_footprint.json  word_count_by_agency.json
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/scripts/: copy-data.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/agency/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/historic/: page.tsx
frontend/src/app/text-analysis/: page.tsx
frontend/src/components/: AgencyCard.tsx  AgencyCardsContainer.tsx  AgencyOverviewCard.tsx  CorrectionsTimeSeries.tsx  HistoricCorrectionsList.tsx  Navbar.tsx  Navigation.tsx  OverviewCard.tsx  RecentCorrections.tsx  RegulationsList.tsx  SearchFilters.tsx  SubAgenciesList.tsx  TextAnalysisContent.tsx  WordCountChart.tsx
frontend/src/types/: data.ts  jsx.d.ts
frontend/src/utils/: data.ts
src/ecfr_analyzer/: __init__.py  cli.py
src/ecfr_analyzer/backend/: base_analyzer.py  corrections_analyzer.py  data_analyzer.py  ecfr_api.py  footprint_analyzer.py  word_count_analyzer.py
src/ecfr_analyzer/process_data/: base_analyzer.py  corrections_analyzer.py  data_analyzer.py  footprint_analyzer.py  word_count_analyzer.py
src/ecfr_analyzer/website/: generator.py  server.py
src/ecfr_analyzer/website/data/: analysis_summary.json  bureaucracy_footprint.json  corrections_by_agency.json  (+2 more)
(+15 files in other folders)
