[tool.poetry]
name = "ecfr-analyzer"
version = "0.1.0"
description = "Analyzer for electronic Code of Federal Regulations data - Department of Government Efficiency"
authors = ["DOGE Team"]
readme = "README.md"
packages = [{include = "ecfr_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"
nltk = "^3.8.1"
tqdm = "^4.66.1"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.0"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
openai = "^1.3.0"
anthropic = "^0.7.0"
lxml = "^5.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ecfr-download = "ecfr_analyzer.cli:download_data"
ecfr-analyze = "ecfr_analyzer.cli:analyze_data"
ecfr-generate = "ecfr_analyzer.cli:generate_site"
